# CyberDetector

./: .replit  README.md  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted--Metodologija-implementacije-Double-DQN-a-za-detekciju-i-obranu-od-DDoS-napada-1-Detaljno-pred-1747232747253.txt  Pasted--Opis-podataka-u-metodologiji-1-Izvori-podataka-Simulirani-promet-Za-potrebe-treniranja-i-1747232686321.txt  Pasted-6-Network-Analysis-Components-1-Basic-Graph-Theory-Applications-Vulnerability-Graphs-Model-networ-1747232755937.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/hooks/: use-theme.tsx
client/src/lib/: d3-utils.ts  queryClient.ts  utils.ts
client/src/pages/: analysis.tsx  dashboard.tsx  database-explorer.tsx  detection.tsx  settings.tsx  simulation.tsx
server/: generate_datasets.py  index.ts  python_api.py  routes.ts  run_python_api.py  storage.ts  test_generator.py  test_mini_dataset.py  test_mongo_aggregation.py
server/analysis/: ddqn.py  ddqn_api.py  network_topology.py  traffic_analyzer.py
server/analysis/detection/: ddos_detector.py
server/database/: __init__.py  data_aggregator.py  mongodb.ts  neo4j.ts  postgres.ts
server/database/mongodb/: __init__.py  alerts.py  attack_events.py  connection.py  data_aggregator.py  datasets.py
server/database/neo4j/: __init__.py
server/datasets/: __init__.py  generator.py
server/routes/: database.ts  python_api.ts
server/visualization/: __init__.py  metrics.py  neo4j_topology.py  network.py  protocol.py  threats.py  traffic.py
shared/: schema.ts
(+35 files in other folders)
