[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tensorflow>=2.14.0",
]
